src/FinancialForce ERP Core/objects/Company__c.object
<CustomObject>
    <customHelpPage>CompanyHelp</customHelpPage>
    <description>Stores the company details.</description>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <description>Company code in the Avatax account to which documents are to be posted. If this field does not contain a value, documents are assigned to the default company.</description>
        <inlineHelpText>Company code in the Avatax account to which documents are to be posted. If this field does not contain a value, documents are assigned to the default company.</inlineHelpText>
        <label>Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CorrelationId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Correlation Id</label>
        <length>32</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>IsAddressValidated__c</fullName>
        <description>Indicates whether the company address has been validated against the addresses in the external tax calculation service.</description>
        <formula>NOT
            ( ISBLANK(Street__c) &amp;&amp;
              ISBLANK(City__c) &amp;&amp; 
              ISBLANK(State__c) &amp;&amp;
              ISBLANK(Zip__c) &amp;&amp;
              ISBLANK(Country__c) 
            ) &amp;&amp; 
            ( Street__c  =  ValidatedStreet__c ) &amp;&amp;
            ( City__c =  ValidatedCity__c ) &amp;&amp;
            ( State__c =  ValidatedState__c ) &amp;&amp;  
            ( Zip__c =  ValidatedZip__c ) &amp;&amp;
            ( Country__c =  ValidatedCountry__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Indicates whether the company address has been validated against the addresses in the external tax calculation service.</inlineHelpText>
        <label>Address Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LogoURL__c</fullName>
        <description>URL of the company&apos;s logo.</description>
        <label>Logo URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Logo__c</fullName>
        <description>Formula field that displays the company logo specified in the Logo URL.</description>
        <formula>IF(LEN(LogoURL__c)=0,&quot;&quot;, IMAGE(LogoURL__c,&quot;Company Logo&quot;))</formula>
        <label>Logo</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <label>Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UniquenessConstraint__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Uniqueness Constraint</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ValidatedCity__c</fullName>
        <label>Validated City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValidatedCountry__c</fullName>
        <label>Validated Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValidatedState__c</fullName>
        <label>Validated State/Province</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ValidatedStreet__c</fullName>
        <label>Validated Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ValidatedZip__c</fullName>
        <label>Validated Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <description>URL of the company&apos;s website.</description>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip/Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Company</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Company Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Companies</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>